<resources>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_10">10</string>
    <string name="key_0">0</string>
    <string name="key_doit10">+/-</string>
    <string name="key_doit8">,</string>
    <string name="key_doit1">1/x</string>
    <string name="key_doit2">x2</string>
    <string name="key_doit3">2√x</string>
    <string name="key_doit4">÷</string>
    <string name="key_doit5">×</string>
    <string name="key_doit6">-</string>
    <string name="key_doit7">+</string>
    <string name="key_doit9">=</string>

</resources>