<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello Hello World!"
        android:ems="16"
        android:textColor="#990066"
        android:textSize="24sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/key_doit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_doit1"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_doit2"/>

    <Button
        android:id="@+id/key_doit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_doit2"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toEndOf="@id/key_doit1"
        app:layout_constraintEnd_toStartOf="@id/key_doit3"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/key_doit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_doit3"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toEndOf="@id/key_doit2"
        app:layout_constraintEnd_toStartOf="@id/key_doit4"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/key_doit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_doit4"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/key_doit3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/key_doit1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_2"/>

    <Button
        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/key_1"
        app:layout_constraintTop_toBottomOf="@id/key_doit2"
        app:layout_constraintEnd_toStartOf="@id/key_3"/>

    <Button
        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/key_2"
        app:layout_constraintTop_toBottomOf="@id/key_doit3"
        app:layout_constraintEnd_toStartOf="@id/key_doit5"/>

    <Button
        android:id="@+id/key_doit5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_doit5"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/key_3"
        app:layout_constraintTop_toBottomOf="@id/key_doit4"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/key_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_5"/>

    <Button
        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_6"/>

    <Button
        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_3"
        app:layout_constraintEnd_toStartOf="@id/key_doit6"/>

    <Button
        android:id="@+id/key_doit6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_doit6"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/key_6"
        app:layout_constraintTop_toBottomOf="@id/key_doit5"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_7"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_8"/>

    <Button
        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_5"/>

    <Button
        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_doit7"
        app:layout_constraintTop_toBottomOf="@id/key_6"/>

    <Button
        android:id="@+id/key_doit7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_doit7"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/key_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_doit6"/>

    <Button
        android:id="@+id/key_doit10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_doit10"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_0"/>

    <Button
        android:id="@+id/key_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_0"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/key_doit10"
        app:layout_constraintTop_toBottomOf="@id/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_doit8"/>

    <Button
        android:id="@+id/key_doit8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_doit8"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/key_0"
        app:layout_constraintTop_toBottomOf="@id/key_9"
        app:layout_constraintEnd_toStartOf="@id/key_doit9"/>

    <Button
        android:id="@+id/key_doit9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_doit9"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/key_doit8"
        app:layout_constraintTop_toBottomOf="@id/key_doit7"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/foto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>






</androidx.constraintlayout.widget.ConstraintLayout>